# china-geo

./: .gitignore  .mcp.json  AGENTS.md  INSTALL.md  LOOP.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
commands/: audit.md  monitor.md
docs/agents/: claude.md  cli-output-samples.md  codebuddy.md  codex.md  kimi.md  lingma.md  opencode.md  qoder.md  trae.md
docs/case-study/: TEMPLATE.md
docs/verify/: VERIFY-claude.md  VERIFY-codebuddy.md  (+6 more)
examples/: README.md  bad-site.html  quickstart.sh  sample-report.md
seogeo/: cli.py  demo.py  dom.py  engines.py  fetch.py  generate.py  mcp_server.py  monitor.py  offsite.py  pipeline.py  render.py  report.py  robots.py  scoring.py  service.py  structure_signals.py  versioning.py
tests/: test_agent_docs.py  test_bytespider.py  test_case_study.py  test_cli.py  test_content.py  test_demo.py  test_discovery.py  test_docs_sync.py  test_dom.py  test_dom_edges.py  test_domestic_bots.py  test_engines.py  test_examples.py  test_fetch.py  test_fetch_edges.py  test_generate.py  test_img_alt.py  test_init_agent_smoke.py  test_mcp.py  test_meta_rules_edges.py  test_misc_edges.py  test_monitor.py  test_monitor_edges.py  test_monitor_score_validation.py  test_offsite.py  test_overseas_bots.py  test_packaging.py  test_pipeline.py  test_readme_quickstart.py  test_readme_sample.py  test_registry.py  test_render.py  test_rendering.py  test_report.py  test_report_edges.py  test_robots.py  test_robots_edges.py  test_sample_report.py  test_scoring.py  test_service.py  (+7 more)
(+29 files in other folders)
