[project]
name = "Chinese-Geo"
version = "0.3.0"
description = "中文 / 国内生态优先的开源 SEO + GEO 工具包（让站点被国内 AI 引擎抓取与引用）"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "qingqingpi"}]
requires-python = ">=3.9"
dependencies = []  # 运行时零依赖（核心）

[project.urls]
Homepage = "https://github.com/qingqingpi/Chinese-Geo"
Repository = "https://github.com/qingqingpi/Chinese-Geo"
Issues = "https://github.com/qingqingpi/Chinese-Geo/issues"

[project.optional-dependencies]
render = ["playwright>=1.40"]  # 可选：JS 渲染对比
mcp = ["mcp>=1.0"]  # 可选：MCP server（chinese-geo-mcp）
dev = ["pytest>=7"]

[project.scripts]
chinese-geo = "seogeo.cli:main"
chinese-geo-mcp = "seogeo.mcp_server:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["seogeo*"]
